# pyconjp2021-discord-auth

./: README.md  main.py  pyproject.toml  setup.cfg
